# my-project

./: .gitignore  README.md  channels.yaml  pyproject.toml
.github/workflows/: python-tests.yml
tests/: test_scoring.py
youtube_news_agent/: __init__.py  __main__.py  config.py  digest.py  main.py  models.py  scoring.py  youtube.py
